Fix z-index issues with countdown & player

--- a/frontend/src/views/countdown/Countdown.module.css
+++ b/frontend/src/views/countdown/Countdown.module.css
@@ -86,6 +86,7 @@
 
 .ribbonCountdown {
 	position: fixed;
+	z-index: 2;
 
 	width: 100%;
 	bottom: 24px;
