--- a/frontend/src/views/player/PlayerBar.module.css
+++ b/frontend/src/views/player/PlayerBar.module.css
@@ -1,4 +1,5 @@
 .playerBar {
+	z-index: 2;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
